Added imprint, fixed link styles

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -80,7 +80,7 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</p>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} - <a href="http://www.galeria-kaufhof.de/service/impressum.html">Impressum</a></p>
       </div>
     </div>
 
