--- a/_includes/themes/gktb2015/default.html
+++ b/_includes/themes/gktb2015/default.html
@@ -13,6 +13,7 @@
 
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ ASSET_PATH }}/css/highlight.css" rel="stylesheet" type="text/css" media="all" />
 
     <!-- Fav and touch icons -->
     <!-- Update these with your own images
@@ -44,8 +45,6 @@
             </ul>
           </div>
         </nav>
-
-{{ site.posts[0].excerpt }}
 
         <div class="gk-content">
           {{ content }}
