--- a/assets/themes/gktb2015/css/style.css
+++ b/assets/themes/gktb2015/css/style.css
@@ -31,9 +31,13 @@ a:hover {
 pre {
   background: #eee;
   padding: 10px;
-  font-size: 14px;
   overflow: scroll;
-  /*word-wrap: break-word;*/
+  border-radius: 4px;
+}
+code {
+  background: #eee;
+  font-size: 0.8rem;
+  padding: 0.2rem;
 }
 
 ul {
@@ -54,8 +58,8 @@ ul {
 }
 
 /* inner wrapper to force fixed width */
-.gk-wrapper-inner,
-.gk-footer-inner {
+.gk-wrapper--inner,
+.gk-footer--inner {
   max-width: 960px;
   margin: 0px auto;
   padding: 0 1em;
@@ -84,45 +88,58 @@ ul {
 /*** HEADER ***/
 
 .gk-header {
-  padding-top: 30px;
+  margin: 30px 0;
 }
 
-.gk-logo {
+.gk-header--logo {
   display: block;
   width: 200px;
   height: 50px;
-  background: url("../img/gk-logo.png");
+  background: url(../img/gk-logo.png);
 }
 
-.gk-navigation {
+.gk-header--navigation {
   list-style: none;
   text-align: right;
 }
-.gk-navigation li {
+.gk-header--navigation li {
   display: inline;
+  margin-left: 20px;
+}
+.gk-header--navigation a {
+  border-bottom: solid 5px #ffffff;
+  padding: 0 0 5px;
+}
+.gk-header--navigation a:hover {
+  border-color: #006d48;
+}
+.gk-header--navigation a span {
+  display: none;
 }
 
-
-/*** CONTENT ***/
-
-.gk-content em {
-  display: block;
-  background: #eee;
-  color: #666;
-  padding: 10px;
+/* icons */
+.gk-icon {
+  height: 33px;
+  display: inline-block;
+  background-repeat: no-repeat;
 }
-
-.gk-content img {
-  max-width: 100%;
+.gk-icon--github {
+  width: 29px;
+  background-image: url(../img/gktb-icon-github.png)
 }
-
-.gk-content p {
-  word-wrap: break-word;
+.gk-icon--menu {
+  width: 28px;
+  background-image: url(../img/gktb-icon-menu.png)
+}
+.gk-icon--search {
+  width: 30px;
+  background-image: url(../img/gktb-icon-search.png)
 }
 
 
 /*** FOOTER ***/
 
+/* container */
 .gk-footer {
   min-height: 250px;
   background: #222;
@@ -130,13 +147,39 @@ ul {
   padding: 50px;
   margin-top: 100px;
 }
-.gk-footer-inner {
+.gk-footer--inner {
 
 }
-.gk-footer-copy {
+.gk-footer--copy {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 100px;
   font-size: 0.7rem;
+}
+
+/*searchbox */
+.gk-searchbox {
+  display: inline-block;
+  padding: 5px;
+  border: solid 1px #eee;
+  border-radius: 4px;
+}
+.gk-searchbox--input {
+  margin: 0;
+  background: none;
+  border: none;
+  outline: none;
+  color: #eee;
+  line-height: 1rem;
+  font-size: 0.8rem;
+}
+.gk-searchbox--button {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  border: none;
+  color: #eee;
+  background: url(../img/gk-icon-search.png);
+  cursor: pointer;
 }
 
 
@@ -144,7 +187,7 @@ ul {
 
 
 
-/*** POST ***/
+/*** POST PREVIEW ***/
 
 /* post preview */
 .gk-post-preview {
@@ -166,10 +209,49 @@ ul {
   margin: 0;
 }
 
-/* post details */
-.gk-post h2 {
-  margin-top: 2rem;
+
+/*** POST FULL ***/
+
+/* headline */
+.gk-post--subline {
+  font-size: 0.8rem;
+  color: #999;
+  margin: 0 0 0.3rem;
+}
+.gk-post--title {
+  font-size: 2rem;
+  line-height: 2.3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: solid 1px #ccc;
 }
 
+/* post content elements */
+.gk-post--content {
+  margin-bottom: 2rem;
+}
+.gk-post--content img {
+  max-width: 100%;
+}
+.gk-post--content p {
+  word-wrap: break-word;
+  margin: 0 0 1rem;
+}
+.gk-post--content h2 {
+  margin: 2rem 0 1rem;
+}
+.gk-post--content h3 {
+  margin: 0.7rem 0 0.5rem;
+}
 
-/*** HOMEPAGE ***/
+/* author info */
+.gk-post--author {
+  margin-bottom: 2rem;
+}
+.gk-post--author--image img {
+  vertical-align: middle;
+}
+.gk-post--author--name {
+  font-style: italic;
+}
