temp logo, RSS icon

--- a/_includes/themes/gktb2015/default.html
+++ b/_includes/themes/gktb2015/default.html
@@ -66,7 +66,7 @@
             </ul>
           </div>
           <div class="gk-col" id="github">
-            MIDDLE
+            <a href="{{ BASE_PATH }}{{ site.JB.rss_path }}"><span class="gk-icon gk-icon--rss"></span></a>
           </div>
           <div class="gk-col gk-align-right" id="search">
             <div class="gk-searchbox">
