--- a/_includes/themes/gktb2015/default.html
+++ b/_includes/themes/gktb2015/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{{ page.title }}</title>
+    <title>GALERIA Kaufhof technology blog {%if page.title %}| {{ page.title }}{%endif%}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}" />
 
@@ -13,7 +13,6 @@
 
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all" />
-    <link href="{{ ASSET_PATH }}/css/gktb.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{ ASSET_PATH }}/css/highlight.css" rel="stylesheet" type="text/css" media="all" />
 
     <!-- Fav and touch icons -->
@@ -33,16 +32,16 @@
   <body>
     <div class="gk-wrapper">
 
-      <div class="gk-wrapper--inner">
+      <div class="gk-wrapper__inner">
 
         <nav class="gk-header gk-cols gk-cols-2">
           <div class="gk-col">
-            <a class="gk-header--logo" href="{{ HOME_PATH }}"><span>{{ site.title }}</span></a>
+            <a class="gk-header__logo" href="{{ HOME_PATH }}"><span>{{ site.title }}</span></a>
           </div>
           <div class="gk-col">
-            <ul class="gk-header--navigation">
-              <li><a href="#search" class="gk-icon gk-icon--search"><span>search</span></a></li>
-              <li><a href="#github" class="gk-icon gk-icon--github"><span>github</span></a></li>
+            <ul class="gk-header__navigation">
+              <!--<li><a href="#search" class="gk-icon gk-icon--search"><span>search</span></a></li>-->
+              <li><a href="https://github.com/Galeria-Kaufhof" class="gk-icon gk-icon--github"><span>github</span></a></li>
               <li><a href="#menu" class="gk-icon gk-icon--menu"><span>menu</span></a></li>
             </ul>
           </div>
@@ -56,9 +55,9 @@
     </div>
 
     <div class="gk-footer">
-        <div class="gk-footer--inner gk-cols gk-cols-3">
+        <div class="gk-footer__inner gk-cols gk-cols-3">
           <div class="gk-col" id="menu">
-            <ul class="gk-footer--navigation">
+            <ul class="gk-footer__navigation">
               {% assign pages_list = site.pages %}
               {% assign group = 'navigation' %}
               {% include JB/pages_list %}
@@ -69,22 +68,20 @@
             <a href="{{ BASE_PATH }}{{ site.JB.rss_path }}"><span class="gk-icon gk-icon--rss"></span></a>
           </div>
           <div class="gk-col gk-align-right" id="search">
-            <div class="gk-searchbox">
+            <!--<div class="gk-searchbox">
               <input type="text" class="gk-searchbox--input" placeholder="Search..." />
               <button class="gk-searchbox--button"><span>Search</span></button>
-            </div>
+            </div>-->
           </div>
         </div>
 
-        <div class="gk-footer--inner gk-footer--copy">
-          &copy; {{ site.time | date: '%Y' }} {{ site.author.name }} - <a href="http://www.galeria-kaufhof.de/service/impressum.html">Impressum</a>
+        <div class="gk-footer__inner gk-footer__copy">
+          &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
         </div>
     </div>
 
     {% include JB/analytics %}
 
-    <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
   </body>
 </html>
