--- a/_includes/themes/gktb2015/page.html
+++ b/_includes/themes/gktb2015/page.html
@@ -1,9 +1,7 @@
-<div class="page-header">
+<div class="gk-page__header">
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 
-<div class="row">
-  <div class="col-xs-12">
-    {{ content }}
-  </div>
+<div class="gk-page__content">
+  {{ content }}
 </div>
