--- a/assets/themes/gktb2015/css/style.css
+++ b/assets/themes/gktb2015/css/style.css
@@ -268,6 +268,13 @@ ul {
 .gk-post__content h3 {
   margin: 0.7rem 0 0.5rem;
 }
+.gk-post__content ul {
+  list-style: disc;
+  margin: 0 0 1rem 2rem;
+}
+.gk-post__content ul li {
+  margin: 0 0 0.35rem;
+}
 
 /* author info */
 .gk-post__author {
