making new design live

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+excerpt_separator: <!--more-->
 ---
 {% include JB/setup %}
-{% include themes/bootstrap-3/post.html %}
+{% include themes/gktb2015/post.html %}
