Final changes to frontend middleware post

--- a/assets/themes/gktb2015/css/style.css
+++ b/assets/themes/gktb2015/css/style.css
@@ -277,6 +277,15 @@ ul {
   margin: 0 0 0.35rem;
 }
 
+.gk-post__content blockquote {
+  background-color: #eee;
+  padding: 1rem;
+}
+
+.gk-post__content blockquote p {
+  margin: 0;
+}
+
 /* author info */
 .gk-post__author {
   margin-bottom: 2rem;
