--- a/_includes/themes/gktb2015/default.html
+++ b/_includes/themes/gktb2015/default.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Custom styles -->
-    <link href="/assets/themes/gktb2015/css/style.css?body=1" rel="stylesheet" type="text/css" media="all" />
-    <link href="/assets/themes/gktb2015/css/highlight.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ ASSET_PATH }}/css/highlight.css" rel="stylesheet" type="text/css" media="all" />
 
     <!-- Fav and touch icons -->
     <!-- Update these with your own images
